stDemoOne/force-app/main/default/objects/xDO_MDC_Unified_Email__c/xDO_MDC_Unified_Email__c.object-meta.xml
<CustomObject>
    <label>Unified Email</label>
    <nameField>
        <label>Unified Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unified Email Address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>