stDemoOne/force-app/main/default/objects/xDO_MDC_Unified_Email__c/fields/GPS_MDC_Email_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>GPS_MDC_Email_Data_Source__c</fullName>
    <label>Data Source</label>
    <length>25</length>
    <type>Text</type>
</CustomField>