stDemoOne/force-app/main/default/objects/xDO_MDC_Unified_Email__c/fields/xDO_MDC_Contact__c.field-meta.xml
<CustomField>
    <fullName>xDO_MDC_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Unified Email Address</relationshipLabel>
    <relationshipName>Unified_Email_Address</relationshipName>
    <type>Lookup</type>
</CustomField>