stDemoOne/force-app/main/default/objects/xDO_MDC_Unified_Email__c/fields/xDO_MDC_Email__c.field-meta.xml
<CustomField>
    <fullName>xDO_MDC_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>