stDemoOne/force-app/main/default/objects/xDO_MDC_Unified_Email__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>xDO_MDC_Contact__c</columns>
    <columns>xDO_MDC_Email__c</columns>
    <columns>GPS_MDC_Email_Data_Source__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>